using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class CONST {
    public const float GRAVITY = 9.8f;
	
}

public class EdisonParam
{
    public const string walk = "Walk";
    public const string defence = "Defence";
    public const string slam1 = "Slam1";
    public const string combo1 = "combo1";
    public const string combo2 = "combo2";
    public const string oneHand = "oneHand";
    public const string slam1cmpt = "slam1cmpt";
}

public class Tags
{
    public const string player = "Player";
    public const string enemy = "Enemy";
}